--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,12 +2,12 @@
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Windows Machine": {
-      "commandName": "MsixPackage",
+      "commandName": "Project",
       "nativeDebugging": false
     },
     "Watch": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
+      "dotnetRunMessages": true,
       "dotnetWatchMessages": "true",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
