--- a/Clippy.csproj
+++ b/Clippy.csproj
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net7.0-android</TargetFrameworks>
-        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('osx'))">$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
-        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst;net7.0-windows10.0.19041.0</TargetFrameworks>
-        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-tizen</TargetFrameworks>
+        <!-- <TargetFrameworks>net7.0-android</TargetFrameworks> -->
+        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('osx'))">$(TargetFrameworks);net7.0-maccatalyst</TargetFrameworks>
+        <!-- <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-ios;net7.0-maccatalyst;net7.0-windows10.0.19041.0</TargetFrameworks>
+        <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
         <TargetFrameworks>$(TargetFrameworks);net7.0</TargetFrameworks>
         <OutputType Condition="'$(TargetFramework)' != 'net7.0'">Exe</OutputType>
 
@@ -13,7 +13,7 @@
         <SingleProject>true</SingleProject>
 
         <!-- Project Options -->
-        <Nullable>enable</Nullable>
+        <!-- <Nullable>enable</Nullable> -->
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>Clippy</RootNamespace>
